# COP421Reader

./: LICENSE  README.md
BillOfMaterials/: COP421Reader.csv
avr/: COP421Reader.c  Makefile  README.txt  crc.h  program.sh  serial.c  serial.h
desktop/: CMakeLists.txt  COPDumper.cpp  COPDumper.h  main.cpp
kicad/COP421Reader/: StarRiderControls-eagle-import.kicad_sym  StarRiderControls.kicad_pcb  StarRiderControls.kicad_pro  StarRiderControls.kicad_sch  fp-lib-table  sym-lib-table
kicad/COP421Reader/StarRiderControls.pretty/: 1206.kicad_mod  1X02.kicad_mod  1X09.kicad_mod  1X10.kicad_mod  1X12.kicad_mod  2X3.kicad_mod  CRYSTAL-CSM-3X.kicad_mod  EIA3216.kicad_mod  EXCELSA35.kicad_mod  HC49UP.kicad_mod  LED-1206.kicad_mod  SSOP28DB.kicad_mod  TACTILE-PTH.kicad_mod  TQFP32-LONGPADS.kicad_mod  USB-B-PTH.kicad_mod
